# connie

./: .gitignore  CMakeLists.txt  WINDOWS-LV2-BUILD.md  connie.h  connie_dsp.c  connie_dsp.h  connie_main.c  connie_params.c  connie_params.h  connie_tuning.h  connie_ui.c  connie_ui.h  install-vst3.ps1  reverb.c  scales.h  sonar-project.properties
.github/workflows/: lv2-build.yml
debian/: changelog  control  copyright  rules
lv2/: CMakeLists.txt
lv2/connie.lv2/: connie.ttl  manifest.ttl  manifest.ttl.in
lv2/source/: connie_lv2.c
packaging/aptrepo-bootstrap/: .gitignore
packaging/aptrepo-bootstrap/conf/: distributions
scripts/: mod_level_meter.py  update-debian-changelog.sh
tests/: headless_dsp_test.c  headless_lv2_test.c
vst3/: CMakeLists.txt
vst3/resource/: connie.rc
vst3/source/: connie_cids.h  connie_paramids.h  connie_plugin.cpp  version.h
